import java.text.SimpleDateFormat

plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'com.reportmill'
version = new SimpleDateFormat("yyyy.MM").format(new Date())

sourceSets.main.java.srcDirs = ['src']
sourceSets.main.resources.srcDirs = ['src']

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories { mavenCentral() }

dependencies {
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-parameters"
}

publishing {

    publications {
        gpr(MavenPublication) {
            artifactId = 'snapkit'
            from components.java
        }
    }
}